Added tags support for themes (#2720)
* Added tags support for themes

* Docs: updated theme creation documentation, adding the tags optional variable

* Changed taxonomy name to `theme-tags`

* Revert "Changed taxonomy name to `theme-tags`"

This reverts commit 2afd6dba5b4c8f703c5b372a15f137169819f431.

* resolving

* resolve

* Search by tags not shown if no content with `theme-tags` taxonomy is provided

--- a/docs/config.toml
+++ b/docs/config.toml
@@ -5,6 +5,10 @@ description = "Everything you need to make a static site engine in one binary."
 compile_sass = true
 build_search_index = true
 
+taxonomies = [
+  { name = "theme-tags"}
+]
+
 [search]
 index_format = "elasticlunr_json"
 
